--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,30 +27,31 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           image: kaniko
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   container:
-  #     image: letsbootch/jelastic-cli:latest
-  #   steps:
-  #   - name: Checkout Code
-  #     uses: actions/checkout@v2
-  #   - name: Deploy
-  #     run: |
-  #       echo y| ~/jelastic/users/authentication/signin --login $FLOW_APP_ENGINE_USER --password $FLOW_APP_ENGINE_PASSWORD --platformUrl https://app.appengine.flow.ch/
-  #       SHORT_DOMAIN="$CI_PROJECT_NAME"
-  #       IMAGE_TAG="latest"
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    container:
+      image: letsbootch/jelastic-cli:latest
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v2
+    - name: Deploy
+      run: |
+        echo y| ~/jelastic/users/authentication/signin --login $FLOW_APP_ENGINE_USER --password $FLOW_APP_ENGINE_PASSWORD --platformUrl https://app.appengine.flow.ch/
+        SHORT_DOMAIN="$CI_PROJECT_NAME"
+        IMAGE_TAG="latest"
         
-  #       # Replace variables in flow_environment.json
-  #       sed -ie "s|REPLACE-WITH-SHORT-DOMAIN|$SHORT_DOMAIN|g" flow_environment.json
-  #       sed -ie "s|REPLACE-WITH-IMAGE|${CI_PROJECT_PATH}|g" flow_environment.json
-  #       sed -ie "s|REPLACE-WITH-REGISTRY-USER|${FLOW_REGISTRY_USER}|g" flow_environment.json
-  #       sed -ie "s|REPLACE-WITH-REGISTRY-PASSWORD|${FLOW_REGISTRY_PASSWORD}|g" flow_environment.json
-  #       sed -ie "s|REPLACE-WITH-REGISTRY-URL|${CI_REGISTRY}|g" flow_environment.json
-  #       sed -ie "s|REPLACE-WITH-TAG|${IMAGE_TAG}|g" flow_environment.json
+        # Replace variables in flow_environment.json
+        sed -ie "s|REPLACE-WITH-SHORT-DOMAIN|$SHORT_DOMAIN|g" flow_environment.json
+        sed -ie "s|REPLACE-WITH-IMAGE|${CI_PROJECT_PATH}|g" flow_environment.json
+        sed -ie "s|REPLACE-WITH-REGISTRY-USER|${FLOW_REGISTRY_USER}|g" flow_environment.json
+        sed -ie "s|REPLACE-WITH-REGISTRY-PASSWORD|${FLOW_REGISTRY_PASSWORD}|g" flow_environment.json
+        sed -ie "s|REPLACE-WITH-REGISTRY-URL|${CI_REGISTRY}|g" flow_environment.json
+        sed -ie "s|REPLACE-WITH-TAG|${IMAGE_TAG}|g" flow_environment.json
+        cat flow_environment.json
 
-  #       # Deploy or create environment
-  #       ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" && ~/jelastic/environment/control/redeploycontainers --envName "$SHORT_DOMAIN" --nodeGroup cp --tag $IMAGE_TAG || ~/jelastic/environment/control/createenvironment --myparams flow_environment.json
-  #       ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" || exit 1
-  #       echo "## SUCCESSFULLY DEPLOYED!"
-  #       echo "URL: https://$SHORT_DOMAIN.appengine.flow.ch"
+        # Deploy or create environment
+        ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" && ~/jelastic/environment/control/redeploycontainers --envName "$SHORT_DOMAIN" --nodeGroup cp --tag $IMAGE_TAG || ~/jelastic/environment/control/createenvironment --myparams flow_environment.json
+        ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" || exit 1
+        echo "## SUCCESSFULLY DEPLOYED!"
+        echo "URL: https://$SHORT_DOMAIN.appengine.flow.ch"
