--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,24 +44,24 @@ jobs:
       run: |
         cp -vr /root/jelastic* ~/ 
     - name: Login to Flow
-      run: echo y| ~/jelastic/users/authentication/signin --login $FLOW_APP_ENGINE_USER --password $FLOW_APP_ENGINE_PASSWORD --platformUrl https://app.appengine.flow.ch/
-    - name: Adjust Flow Environment
-      run: |
-        # Replace variables in flow_environment.json
-        sed -ie "s|REPLACE-WITH-SHORT-DOMAIN|$SHORT_DOMAIN|g" flow_environment.json
-        sed -ie "s|REPLACE-WITH-IMAGE|${CI_PROJECT_PATH}|g" flow_environment.json
-        sed -ie "s|REPLACE-WITH-REGISTRY-USER|${FLOW_REGISTRY_USER}|g" flow_environment.json
-        sed -ie "s|REPLACE-WITH-REGISTRY-PASSWORD|${FLOW_REGISTRY_PASSWORD}|g" flow_environment.json
-        sed -ie "s|REPLACE-WITH-REGISTRY-URL|${CI_REGISTRY}|g" flow_environment.json
-        sed -ie "s|REPLACE-WITH-TAG|${IMAGE_TAG}|g" flow_environment.json
-        cat flow_environment.json
-    - name: Create environment
-      run: ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" && ~/jelastic/environment/control/redeploycontainers --envName "$SHORT_DOMAIN" --nodeGroup cp --tag $IMAGE_TAG 
-    - name: Redeploy containers
-      run: ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" || ~/jelastic/environment/control/createenvironment --myparams flow_environment.json
-    - name: Verfiy environment
-      run: ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" || exit 1
-    - name: Deployment URL
-      run: |
-        echo "## SUCCESSFULLY DEPLOYED!"
-        echo "URL: https://$SHORT_DOMAIN.appengine.flow.ch"
+      run: echo y| echo ~/jelastic/users/authentication/signin --login $FLOW_APP_ENGINE_USER --password $FLOW_APP_ENGINE_PASSWORD --platformUrl https://app.appengine.flow.ch/
+    # - name: Adjust Flow Environment
+    #   run: |
+    #     # Replace variables in flow_environment.json
+    #     sed -ie "s|REPLACE-WITH-SHORT-DOMAIN|$SHORT_DOMAIN|g" flow_environment.json
+    #     sed -ie "s|REPLACE-WITH-IMAGE|${CI_PROJECT_PATH}|g" flow_environment.json
+    #     sed -ie "s|REPLACE-WITH-REGISTRY-USER|${FLOW_REGISTRY_USER}|g" flow_environment.json
+    #     sed -ie "s|REPLACE-WITH-REGISTRY-PASSWORD|${FLOW_REGISTRY_PASSWORD}|g" flow_environment.json
+    #     sed -ie "s|REPLACE-WITH-REGISTRY-URL|${CI_REGISTRY}|g" flow_environment.json
+    #     sed -ie "s|REPLACE-WITH-TAG|${IMAGE_TAG}|g" flow_environment.json
+    #     cat flow_environment.json
+    # - name: Create environment
+    #   run: ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" && ~/jelastic/environment/control/redeploycontainers --envName "$SHORT_DOMAIN" --nodeGroup cp --tag $IMAGE_TAG 
+    # - name: Redeploy containers
+    #   run: ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" || ~/jelastic/environment/control/createenvironment --myparams flow_environment.json
+    # - name: Verfiy environment
+    #   run: ~/jelastic/environment/control/getbasicenvsinfo|grep "$SHORT_DOMAIN" || exit 1
+    # - name: Deployment URL
+    #   run: |
+    #     echo "## SUCCESSFULLY DEPLOYED!"
+    #     echo "URL: https://$SHORT_DOMAIN.appengine.flow.ch"
