use personal access token for permanent pulling of image

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,7 @@ env:
   FLOW_APP_ENGINE_USER: ${{ secrets.FLOW_APP_ENGINE_USER }}
   FLOW_APP_ENGINE_PASSWORD: ${{ secrets.FLOW_APP_ENGINE_PASSWORD }}
   FLOW_REGISTRY_USER: "USERNAME"
-  FLOW_REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+  FLOW_REGISTRY_PASSWORD: ${{ secrets.FLOW_REGISTRY_PASSWORD }}
   CI_REGISTRY: "ghcr.io" # Replace with your Docker registry URL
   IMAGE_TAG: "latest"
 
